--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-multi-carousel": "^2.8.5",
     "react-on-screen": "^2.1.1",
     "react-router-hash-link": "^2.4.3"
